# proof-of-alpha

./: .gitignore  .vercelignore  Anchor.toml  Cargo.toml  README.md  capacitor.config.ts  package-lock.json  package.json
.claude/: settings.local.json
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/proofofalpha/app/: MainActivity.java
android/app/src/main/res/values/: strings.xml
app/: globals.css  layout.tsx  page.tsx
app/api/award-aura/: route.ts
app/api/chat/: route.ts
app/api/life/: route.ts
app/api/magicblock/status/: route.ts
app/api/store-purchase/: route.ts
app/character-select/: page.tsx
app/components/: ConditionalFooter.tsx  Footer.tsx  MagicBlockStatus.tsx  Nav.tsx  PlayLobby.tsx  RizzTestModal.tsx  SolanaMobileWalletProvider.tsx  SolanaWalletConnect.tsx  WalletGate.tsx  WalletProvider.tsx
app/dashboard/: page.tsx
app/end/: page.tsx
app/game/: page.tsx
app/guilds/: page.tsx
app/guilds/[id]/: page.tsx
app/home/: page.tsx
app/how-to-play/: page.tsx
app/leaderboard/: page.tsx
app/lib/: archetypes.ts  aura.ts  award-token.ts  game-logic.ts  game-program.ts  girls.ts  guilds.ts  haptics.ts  leaderboard.ts  magicblock.ts  mwa.ts  scenarios.ts  sol-transfer.ts  solana-client.ts  solblaze.ts  sounds.ts  supabase.ts  unlocks.ts  upgrades.ts
app/life/: page.tsx
app/lobby/: page.tsx
app/locker-room/: page.tsx
app/map/: page.tsx
app/mode-select/: page.tsx
app/play/: page.tsx
app/privacy-policy/: page.tsx
app/profile/: page.tsx
app/profile/[addr]/: page.tsx
app/rules/: page.tsx
app/saura/: page.tsx
app/scenarios/: page.tsx
app/settings/: page.tsx
app/store/: page.tsx
app/terms/: page.tsx
app/test/: page.tsx
app/tips/: page.tsx
programs/proof-of-alpha/: Cargo.toml
programs/proof-of-alpha/src/: lib.rs
scripts/: initialize.mjs
