[workspace]
members = ["programs/*"]
resolver = "2"

[profile.release]
opt-level = "z"          # optimize for binary size (not speed)
lto = true               # link-time optimization — strips unused code across crates
codegen-units = 1        # single compilation unit — better dead-code elimination
overflow-checks = false  # safe — we use saturating_add/sub everywhere
strip = "symbols"        # strip debug symbols from final binary
panic = "abort"          # smaller panic handler
