[workspace]
members = ["programs/*"]
resolver = "2"

[profile.release]
overflow-checks = true   # explicit safety (saturating_* ops prevent actual overflow)
lto = "fat"              # full cross-crate LTO — strips all unused code
codegen-units = 1        # single CGU — maximises dead-code elimination
opt-level = "z"          # optimise for binary size
strip = "symbols"        # strip debug symbols (free size win)
panic = "abort"          # smaller panic handler
