[package]
name = "proof-of-alpha"
version = "0.1.0"
description = "Proof of Alpha — AURA economy and ALPHA token"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "proof_of_alpha"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
