[package]
name = "proof-of-alpha"
version = "0.1.0"
description = "Proof of Alpha — AURA economy (Pinocchio native)"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "proof_of_alpha"

[features]
default = []

[dependencies]
pinocchio        = { version = "0.11", features = ["cpi"] }
pinocchio-system = "0.6"
